# drata-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
src/drata_mcp/: __init__.py  client.py  server.py
tests/: conftest.py  test_client.py  test_server.py
